Datagrid to 100% stops overflow hidden

--- a/src/assets/css/_general.scss
+++ b/src/assets/css/_general.scss
@@ -7,11 +7,11 @@
 
 body *, body *:before, body *:after {
     /* Chrome 9-, Safari 5-, iOS 4.2-, Android 3-, Blackberry 7- */
-    -webkit-box-sizing: border-box; 
-  
+    -webkit-box-sizing: border-box;
+
     /* Firefox (desktop or Android) 28- */
     -moz-box-sizing: border-box;
-  
+
     /* Firefox 29+, IE 8+, Chrome 10+, Safari 5.1+, Opera 9.5+, iOS 5+, Opera Mini Anything, Blackberry 10+, Android 4+ */
     box-sizing: border-box;
 
@@ -491,4 +491,8 @@ h2.statement {
     color: #b7b7b7;
     text-align: center;
     margin: 30px auto;
+}
+
+.datagrid {
+    width: 100% !important;
 }
